--- a/webclient/public/stylesheets/jquery-ui-1.7.2.custom-tabs.css
+++ b/webclient/public/stylesheets/jquery-ui-1.7.2.custom-tabs.css
@@ -1,73 +1,97 @@
-/*
-* Source: jQuery tab CSS Framework
-*/
-
+/** Source: jQuery tab CSS Framework */
+/*#--
+ *# Webyast Webservice framework
+ *#
+ *# Copyright (C) 2009, 2010 Novell, Inc.
+ *#   This library is free software; you can redistribute it and/or modify
+ *# it only under the terms of version 2.1 of the GNU Lesser General Public
+ *# License as published by the Free Software Foundation.
+ *#
+ *#   This library is distributed in the hope that it will be useful, but WITHOUT
+ *# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ *# FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
+ *# details.
+ *#
+ *#   You should have received a copy of the GNU Lesser General Public
+ *# License along with this library; if not, write to the Free Software
+ *# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
+ *#++ */
+/* WebYaST colors */
+/*#--
+ *# Webyast Webservice framework
+ *#
+ *# Copyright (C) 2009, 2010 Novell, Inc. 
+ *#   This library is free software; you can redistribute it and/or modify
+ *# it only under the terms of version 2.1 of the GNU Lesser General Public
+ *# License as published by the Free Software Foundation. 
+ *#
+ *#   This library is distributed in the hope that it will be useful, but WITHOUT
+ *# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ *# FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more 
+ *# details.
+ *#
+ *#   You should have received a copy of the GNU Lesser General Public
+ *# License along with this library; if not, write to the Free Software 
+ *# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
+ *#++ */
 .fieldset-group.ui-corner-all {
-  -moz-border-radius-bottomleft:0px;
-  -moz-border-radius-bottomright:0px;
-  -moz-border-radius-topleft:0px;
-  -moz-border-radius-topright:0px;
-  border: none;
-}
-
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  -moz-background-clip: border;
+  -khtml-border-radius: 0;
+  -moz-box-shadow: none;
+  border-radius: 0;
+  border: none; }
 .fieldset-group.ui-tabs {
   margin: 1em;
   padding: 0px;
-  color: #333;
-  font: 1em "lsLucida Grande", "Trebuchet MS", Verdana, sans-serif;
-}
-
+  color: #111111;
+  font: 1em "lsLucida Grande", "Trebuchet MS", Verdana, sans-serif; }
 .fieldset-group fieldset.ui-tabs-panel {
-  -moz-border-radius-bottomleft:5px;
-  -moz-border-radius-bottomright:5px;
-  -moz-border-radius-topleft:5px;
-  -moz-border-radius-topright:5px;
-  border-color: #DDDDDD #CCCCCC #BBBBBB;
-  border-style:solid;
-  border-width: 1px 1px 1px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-background-clip: border;
+  -khtml-border-radius: 4px;
+  -moz-box-shadow: none;
+  border-radius: 4px;
+  border-color: #9ba8a7 #7e8987 #616968;
+  border-style: solid;
+  border-width: 1px;
   margin: 0px;
-  background-color: #eee;
-}
-
+  background-color: #c2d3d1; }
 .fieldset-group .ui-widget-header {
   border: none;
   background: transparent;
-  margin: 0px 5px 0px;
-}
-
+  margin: 0px 5px 0px; }
 .fieldset-group.ui-tabs .ui-tabs-nav li a {
   padding-top: 0;
   padding-bottom: 0;
-  border: 0 none transparent;
-}
-
-.fieldset-group .ui-tabs-nav .ui-state-default,
-.fieldset-group .ui-tabs-nav .ui-state-active {
-  -moz-border-radius-topleft:5px;
-  -moz-border-radius-topright:5px;
-  border-color: #DDDDDD #CCCCCC #BBBBBB;
-  border-width: 1px;
+  border: 0 none transparent; }
+.fieldset-group .ui-tabs-nav .ui-state-default, .fieldset-group .ui-tabs-nav .ui-state-active {
+  -moz-border-radius-topleft: 4px;
+  -moz-border-radius-topright: 4px;
+  border-radius-topleft: 4px;
+  border-radius-topright: 4px;
+  -webkit-border-radius-topleft: 4px;
+  -webkit-border-radius-topright: 4px;
+  -khtml-border-radius-topleft: 4px;
+  -khtml-border-radius-topright: 4px;
+  -moz-background-clip: border;
+  border-color: #9ba8a7 #7e8987 #616968;
   border-style: solid;
+  border-width: 1px;
   position: relative;
   bottom: -1;
-}
-
+  color: #697271; }
 .fieldset-group .ui-tabs-nav .ui-state-active {
-  border-bottom-style: none;
-}
-
-.fieldset-group.ui-widget-content .ui-tabs-nav .ui-state-default,
-.fieldset-group.ui-widget-content .ui-tabs-nav .ui-state-active {
-  background-color: #eee;
-  background-image: none;
-  font-weight: bold;
-}
-
+  color: #111111;
+  border-bottom-style: none; }
 .fieldset-group.ui-widget-content {
-  background: transparent;
-}
-
+  background: transparent; }
+  .fieldset-group.ui-widget-content .ui-tabs-nav .ui-state-default, .fieldset-group.ui-widget-content .ui-tabs-nav .ui-state-active {
+    background-color: #c2d3d1;
+    background-image: none;
+    font-weight: bold; }
 .fieldset-group.ui-tabs .ui-tabs-panel {
   padding-left: 8px;
-  padding-right: 8px;
-}
+  padding-right: 8px; }
