--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -16,6 +16,41 @@
  *# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
  *#++ */
 /* == Used Colours =========================================================== */
+/*#--
+ *# Webyast Webservice framework
+ *#
+ *# Copyright (C) 2009, 2010 Novell, Inc.
+ *#   This library is free software; you can redistribute it and/or modify
+ *# it only under the terms of version 2.1 of the GNU Lesser General Public
+ *# License as published by the Free Software Foundation.
+ *#
+ *#   This library is distributed in the hope that it will be useful, but WITHOUT
+ *# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ *# FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
+ *# details.
+ *#
+ *#   You should have received a copy of the GNU Lesser General Public
+ *# License along with this library; if not, write to the Free Software
+ *# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
+ *#++ */
+/* WebYaST colors */
+/*#--
+ *# Webyast Webservice framework
+ *#
+ *# Copyright (C) 2009, 2010 Novell, Inc. 
+ *#   This library is free software; you can redistribute it and/or modify
+ *# it only under the terms of version 2.1 of the GNU Lesser General Public
+ *# License as published by the Free Software Foundation. 
+ *#
+ *#   This library is distributed in the hope that it will be useful, but WITHOUT
+ *# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ *# FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more 
+ *# details.
+ *#
+ *#   You should have received a copy of the GNU Lesser General Public
+ *# License along with this library; if not, write to the Free Software 
+ *# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
+ *#++ */
 /* == Basic setup  ======================================================== */
 /* html, */
 /* unnecessary property, causes inheritance */
@@ -75,31 +110,36 @@ a {
       /*  Studio: #8e908b */
       /*  text-shadow:0px 0px 8px rgba(160,160,160,1), 0px 0px 15px rgba(28,148,169,0.5), 0px 0px 20px rgba(120,120,120,0.2); */ }
   a.button {
-    background: #86a8a3 url(images/button-bg-rollover.gif) repeat-x scroll center top;
+    background: #86a8a3 url(images/button-bg-rollover-gradient.png) repeat-x scroll center top;
     color: #111111;
     font-size: 13px;
     font-family: Trebuchet MS, Helvetica, sans-serif;
     font-weight: bold;
-    border: 1px solid #435451;
+    border-color: #354340 #2b3634 #212a28;
+    border-style: solid;
+    border-width: 1px;
+    -moz-background-inline-policy: continuous;
+    -moz-background-origin: padding;
     cursor: pointer;
     padding: 2px 10px;
     text-decoration: none;
-    text-shadow: 0 -1px 0 #435451;
+    text-shadow: 0 -1px 0 #c2d3d1;
     width: auto;
     vertical-align: baseline;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     -moz-background-clip: border;
-    -moz-background-inline-policy: continuous;
-    -moz-background-origin: padding;
+    -khtml-border-radius: 4px;
+    -moz-box-shadow: none;
+    border-radius: 4px;
     /* CSS Hack for IE8 */
     padding: 2px 10px \9;
     color: #111111 \9  !important;
     /* end of hack */ }
     a.button:hover {
-      text-shadow: 0 -1px 0 #435451;
       background-position: 0 -22px;
-      color: white !important; }
+      color: white;
+      text-shadow: 0 -1px 0 #435451; }
     a.button[disabled] {
       color: #4c4c4c;
       text-shadow: 0 -1px 0 #4c4c4c; }
@@ -108,23 +148,28 @@ a {
 
 /* CSS properties for all input elements */
 input.button, input[type="submit"], input[type="button"] {
-  background: #86a8a3 url(images/button-bg-rollover.gif) repeat-x scroll center top;
+  background: #86a8a3 url(images/button-bg-rollover-gradient.png) repeat-x scroll center top;
   color: #111111;
   font-size: 13px;
   font-family: Trebuchet MS, Helvetica, sans-serif;
   font-weight: bold;
-  border: 1px solid #435451;
+  border-color: #354340 #2b3634 #212a28;
+  border-style: solid;
+  border-width: 1px;
+  -moz-background-inline-policy: continuous;
+  -moz-background-origin: padding;
   cursor: pointer;
   padding: 2px 10px;
   text-decoration: none;
-  text-shadow: 0 -1px 0 #435451;
+  text-shadow: 0 -1px 0 #c2d3d1;
   width: auto;
   vertical-align: baseline;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   -moz-background-clip: border;
-  -moz-background-inline-policy: continuous;
-  -moz-background-origin: padding; }
+  -khtml-border-radius: 4px;
+  -moz-box-shadow: none;
+  border-radius: 4px; }
   input.button:hover, input[type="submit"]:hover, input[type="button"]:hover {
     background-position: 0 -22px;
     color: white;
@@ -182,7 +227,7 @@ ul li {
 /* == Basic Structure ===================================================== */
 #header {
   width: 100%;
-  background: #6eb928 url("images/bg-head-gradient-grey.png") repeat-x scroll 0 0;
+  background: #6eb928 url("images/bg-head-gradient.png") repeat-x scroll 0 0;
   border-bottom: 1px solid #426f18;
   height: 50px;
   text-align: center;
@@ -306,16 +351,15 @@ ul li {
 
 .plugin-content {
   background-color: white;
-  border-color: #b4c0a9 #929c89 #71786a;
+  border-color: #71786a #929c89 #b4c0a9;
   border-style: solid;
   border-width: 1px;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  border-radius: 5px;
-  -webkit-box-shadow: 0 1px 3px #9ea894;
-  -moz-box-shadow: 0 1px 3px #9ea894;
-  box-shadow: 0 1px 3px #9ea894;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-background-clip: border;
+  -khtml-border-radius: 4px;
+  -moz-box-shadow: none;
+  border-radius: 4px;
   float: left;
   clear: both;
   width: 100%;
@@ -367,8 +411,12 @@ ul li {
       border-color: #435451;
       background: #e2f1d4;
       text-decoration: none;
-      -moz-border-radius: 5px;
-      -webkit-border-radius: 5px; }
+      -moz-border-radius: 4px;
+      -webkit-border-radius: 4px;
+      -moz-background-clip: border;
+      -khtml-border-radius: 4px;
+      -moz-box-shadow: none;
+      border-radius: 4px; }
   .list-row div div, .list-row div a {
     text-align: center; }
 
@@ -377,14 +425,15 @@ fieldset {
   background-color: #c2d3d1;
   border: none;
   margin: 1em;
-  border-color: #dddddd #cccccc #bbbbbb;
+  border-color: #9ba8a7 #7e8987 #616968;
   border-style: solid;
   border-width: 1px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-background-clip: border;
+  -khtml-border-radius: 4px;
   -moz-box-shadow: none;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  border-radius: 5px; }
+  border-radius: 4px; }
   fieldset p {
     clear: both;
     margin-bottom: 0.5em;
@@ -448,7 +497,6 @@ fieldset fieldset {
   background-color: transparent;
   border: none;
   margin: 0em;
-  border: 0px none transparent;
   -moz-box-shadow: none;
   padding: 0px; }
   fieldset fieldset p {
@@ -608,14 +656,16 @@ tr.even {
 
 /* List accordion styles */
 .list-fieldset {
-  border-color: #dddddd #cccccc #bbbbbb;
+  border-color: #9ba8a7 #7e8987 #616968;
   border-style: solid;
   border-width: 1px;
-  background-color: #eeeeee;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  border-radius: 5px;
+  background-color: #c2d3d1;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-background-clip: border;
+  -khtml-border-radius: 4px;
+  -moz-box-shadow: none;
+  border-radius: 4px;
   padding: 0 0.5em;
   margin: 0.5em 1em 0.5em; }
 
@@ -629,13 +679,13 @@ tr.even {
 
 p.missing-permissions {
   margin-left: 1em;
-  color: #ff9900; }
+  color: #990000; }
 
 div#browserWarning {
-  background-color: "#fcfdde";
+  background-color: white;
   width: 100%;
-  border-top: solid 1px black;
-  border-bottom: solid 1px black;
+  border-top: solid 1px #990000;
+  border-bottom: solid 1px #990000;
   text-align: center;
   padding: 5px 0px 5px 0px; }
 
