webclient: back to original colors

--- a/webclient/public/stylesheets/_colors.sass
+++ b/webclient/public/stylesheets/_colors.sass
@@ -19,15 +19,15 @@
 
 /* WebYaST colors
 
-$c_header: #6eb928
+$c_header: #444
 $c_text: #111111
-$c_anchor_underline: #0e5148
-$c_error: #990000
+$c_anchor_underline: #1e90ff
+$c_error: red
 $c_white: #ffffff
 $c_gray: #888888
 $c_black: #000000
-$c_button: mix($c_white, $c_anchor_underline, 50%)
-$c_fieldset: mix($c_white, $c_button, 50%)
+$c_fieldset: #eee
+$c_button: $c_fieldset
 $c_background: mix($c_white, $c_header, 80%)
 $c_anchor: $c_text
 $c_shortcut_background: $c_background
