--- a/webclient/public/stylesheets/_colors.sass
+++ b/webclient/public/stylesheets/_colors.sass
@@ -19,7 +19,7 @@
 
 /* WebYaST colors
 
-$c_header: #444
+$c_header: #ddd
 $c_text: #111111
 $c_anchor_underline: #1e90ff
 $c_error: red
@@ -27,8 +27,8 @@ $c_white: #ffffff
 $c_gray: #888888
 $c_black: #000000
 $c_fieldset: #eee
-$c_button: $c_fieldset
-$c_background: mix($c_white, $c_header, 80%)
+$c_background: #f5f5f5
+$c_button: mix($c_black,$c_fieldset,20%)
 $c_anchor: $c_text
 $c_shortcut_background: $c_background
 $c_inverse_text: $c_white
@@ -36,7 +36,8 @@ $c_disabled_text: mix($c_gray, $c_text, 50%)
 $c_button_border: mix($c_black, $c_button, 50%)
 $c_hower_text_shadow: mix($c_black, $c_button, 50%)
 $c_text_shadow: mix($c_white, $c_button, 50%)
-$c_focused_input: mix($c_black, $c_button, 20%)
+$c_input_border: mix($c_black, $c_button, 20%)
+$c_focused_input: $c_anchor_underline
 $c_content_shadow: mix($c_black, $c_background, 30%)
 
 
