--- a/webclient/public/stylesheets/jquery-ui-1.7.2.custom-accordion.sass
+++ b/webclient/public/stylesheets/jquery-ui-1.7.2.custom-accordion.sass
@@ -1,70 +1,58 @@
-/** Source: jQuery UI CSS Framework
+/*
+ ** Source: jQuery UI CSS Framework
  ** Copyright (c) 2009 AUTHORS.txt (http://jqueryui.com/about)
- ** Dual licensed under the MIT (MIT-LICENSE.txt) and GPL (GPL-LICENSE.txt) licenses. */
+ ** Dual licensed under the MIT (MIT-LICENSE.txt) and GPL (GPL-LICENSE.txt) licenses.
+
 /*Accordion
- *---------------------------------- */
-/*#--
- *# Webyast Webservice framework
- *#
- *# Copyright (C) 2009, 2010 Novell, Inc.
- *#   This library is free software; you can redistribute it and/or modify
- *# it only under the terms of version 2.1 of the GNU Lesser General Public
- *# License as published by the Free Software Foundation.
- *#
- *#   This library is distributed in the hope that it will be useful, but WITHOUT
- *# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
- *# FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
- *# details.
- *#
- *#   You should have received a copy of the GNU Lesser General Public
- *# License along with this library; if not, write to the Free Software
- *# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
- *#++ */
-/* WebYaST colors */
-.ui-accordion .wrapper {
-  min-height: 1em; }
+ *----------------------------------
+@import "colors"
+@import "borders"
 
-.no-min-height {
-  min-height: 0 !important; }
+.ui-accordion
+  .ui-accordion-header, .ui-state-default
+  .wrapper
+    min-height: 1em
 
-.ui-accordion .ui-accordion-li-fix {
-  display: inline; }
-.ui-accordion .ui-accordion-header a {
-  display: block;
-  font-size: 1em;
-  padding: 0; }
+.no-min-height
+  min-height: 0 !important
 
-.accordion.ui-accordion .ui-accordion-content {
-  display: none;
-  border: none;
-  background: none;
-  padding: 0px; }
+.ui-accordion
+  .ui-accordion-li-fix
+    display: inline
+  .ui-accordion-header a
+    display: block
+    font-size: 1em
+    padding: 0
 
-.ui-accordion .ui-accordion-content-active {
-  display: block; }
-.ui-accordion .status-icon {
-  position: relative;
-  top: -2px; }
-.ui-accordion .ui-corner-top {
-  -moz-border-radius-topleft: 0px;
-  -moz-border-radius-topright: 0px; }
-.ui-accordion .ui-state-active, .ui-accordion .ui-widget-content .ui-state-active, .ui-accordion .ui-state-default, .ui-accordion .ui-widget-content .ui-state-default {
-  background: none;
-  border: none;
-  color: #111111; }
-.ui-accordion legend.ui-state-active, .ui-accordion .ui-widget-content legend.ui-state-active, .ui-accordion legend.ui-state-default, .ui-accordion .ui-widget-content legend.ui-state-default {
-  font-weight: bold;
-  font-size: 1em; }
-.ui-accordion .ui-accordion-header .ui-icon {
-  float: left;
-  left: 0.5em;
-  margin-top: 0px;
-  position: inherit;
-  padding-right: 5px; }
-.ui-accordion .ui-corner-all {
-  -moz-border-radius-bottomleft: 0px;
-  -moz-border-radius-bottomright: 0px;
-  -moz-border-radius-topleft: 0px;
-  -moz-border-radius-topright: 0px; }
+.accordion.ui-accordion .ui-accordion-content
+  display: none
+  border: none
+  background: none
+  padding: 0px
 
-/* Reset regular jquery-ui styles inside accordion */
+.ui-accordion
+  .ui-accordion-content-active
+    display: block
+  .status-icon
+    position: relative
+    top: -2px
+  .ui-corner-top
+    -moz-border-radius-topleft: 0px
+    -moz-border-radius-topright: 0px
+  .ui-state-active, .ui-widget-content .ui-state-active, .ui-state-default, .ui-widget-content .ui-state-default
+    background: none
+    border: none
+    color: $c_text
+  legend.ui-state-active, .ui-widget-content legend.ui-state-active, legend.ui-state-default, .ui-widget-content legend.ui-state-default
+    font-weight: bold
+    font-size: 1em
+  .ui-accordion-header .ui-icon
+    float: left
+    left: 0.5em
+    margin-top: 0px
+    position: inherit
+    padding-right: 5px
+  .ui-corner-all
+    @include no-round-corners
+
+/* Reset regular jquery-ui styles inside accordion
