--- a/webclient/public/stylesheets/jquery-ui-1.7.2.custom-tabs.css
+++ b/webclient/public/stylesheets/jquery-ui-1.7.2.custom-tabs.css
@@ -54,11 +54,11 @@
   -khtml-border-radius: 4px;
   -moz-box-shadow: none;
   border-radius: 4px;
-  border-color: #9ba8a7 #7e8987 #616968;
+  border-color: #bebebe #9a9a9a #777777;
   border-style: solid;
   border-width: 1px;
   margin: 0px;
-  background-color: #c2d3d1; }
+  background-color: #eeeeee; }
 .fieldset-group .ui-widget-header {
   border: none;
   background: transparent;
@@ -77,19 +77,19 @@
   -khtml-border-radius-topleft: 4px;
   -khtml-border-radius-topright: 4px;
   -moz-background-clip: border;
-  border-color: #9ba8a7 #7e8987 #616968;
+  border-color: #bebebe #9a9a9a #777777;
   border-style: solid;
   border-width: 1px;
   position: relative;
   bottom: -1;
-  color: #697271; }
+  color: #7f7f7f; }
 .fieldset-group .ui-tabs-nav .ui-state-active {
   color: #111111;
   border-bottom-style: none; }
 .fieldset-group.ui-widget-content {
   background: transparent; }
   .fieldset-group.ui-widget-content .ui-tabs-nav .ui-state-default, .fieldset-group.ui-widget-content .ui-tabs-nav .ui-state-active {
-    background-color: #c2d3d1;
+    background-color: #eeeeee;
     background-image: none;
     font-weight: bold; }
 .fieldset-group.ui-tabs .ui-tabs-panel {
