--- a/plugins/users/app/views/users/_user_form.erb
+++ b/plugins/users/app/views/users/_user_form.erb
@@ -97,7 +97,7 @@
       <legend><span><%= _("Roles") %></span></legend>
        <div>
 	<%= f.text_field :roles_string, :disabled => false  %>
-	<a href="#" class="button"><%= _("Manage Roles") %></a>
+	<a href="#" class="button" disabled=true><%= _("Manage Roles") %></a>
        </div>
       </fieldset>
 
