- updated jquery.jqplot plugin from version 0.8.5 to 0.9.7

--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -27,6 +27,7 @@
 <%= javascript_include_tag "plugin/jqplot.dateAxisRenderer.js" %>
 <%= javascript_include_tag "plugin/jqplot.canvasTextRenderer.js" %>
 <%= javascript_include_tag "plugin/jqplot.cursor.js" %>
+<%= javascript_include_tag "plugin/jqplot.pieRenderer.js" %>
 <% end %>
 
 <% content_for :before_script do %>
