--- a/webclient/public/stylesheets/jquery.jqplot.css
+++ b/webclient/public/stylesheets/jquery.jqplot.css
@@ -1,17 +1,33 @@
-/* Source: jquery jplot */
 /*rules for the plot target div.  These will be cascaded down to all plot elements according to css rules*/
 .jqplot-target {
     position: relative;
     color: #666666;
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     font-size: 1em;
-    height: 300px;
-    width: 400px;
+/*    height: 300px;
+    width: 400px;*/
 }
 
 /*rules applied to all axes*/
 .jqplot-axis {
     font-size: 0.75em;
+}
+
+.jqplot-xaxis {
+    margin-top: 10px;
+}
+
+.jqplot-x2axis {
+    margin-bottom: 10px;
+}
+
+.jqplot-yaxis {
+    margin-right: 10px;
+}
+
+.jqplot-y2axis, .jqplot-y3axis, .jqplot-y4axis, .jqplot-y5axis, .jqplot-y6axis, .jqplot-y7axis, .jqplot-y8axis, .jqplot-y9axis {
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 /*rules applied to all axis tick divs*/
@@ -24,7 +40,7 @@
     top: 0px;
     /* initial position untill tick is drawn in proper place */
     left: 15px;
-    padding-top: 10px;
+/*    padding-top: 10px;*/
     vertical-align: top;
 }
 
@@ -32,7 +48,7 @@
     bottom: 0px;
     /* initial position untill tick is drawn in proper place */
     left: 15px;
-    padding-bottom: 10px;
+/*    padding-bottom: 10px;*/
     vertical-align: bottom;
 }
 
@@ -40,7 +56,7 @@
     right: 0px;
     /* initial position untill tick is drawn in proper place */
     top: 15px;
-    padding-right: 10px;
+/*    padding-right: 10px;*/
     text-align: right;
 }
 
@@ -48,16 +64,63 @@
     left: 0px;
     /* initial position untill tick is drawn in proper place */
     top: 15px;
-    padding-left: 10px;
-    padding-right: 15px;
+/*    padding-left: 10px;*/
+/*    padding-right: 15px;*/
     text-align: left;
 }
 
-table.jqplot-legend {
+.jqplot-xaxis-label {
+    margin-top: 10px;
+    font-size: 11pt;
+    position: absolute;
+}
+
+.jqplot-x2axis-label {
+    margin-bottom: 10px;
+    font-size: 11pt;
+    position: absolute;
+}
+
+.jqplot-yaxis-label {
+    margin-right: 10px;
+/*    text-align: center;*/
+    font-size: 11pt;
+    position: absolute;
+}
+
+.jqplot-y2axis-label, .jqplot-y3axis-label, .jqplot-y4axis-label, .jqplot-y5axis-label, .jqplot-y6axis-label, .jqplot-y7axis-label, .jqplot-y8axis-label, .jqplot-y9axis-label {
+/*    text-align: center;*/
+    font-size: 11pt;
+    position: absolute;
+}
+
+table.jqplot-table-legend, table.jqplot-cursor-legend {
     background-color: rgba(255,255,255,0.6);
     border: 1px solid #cccccc;
     position: absolute;
     font-size: 0.75em;
+}
+
+td.jqplot-table-legend {
+    vertical-align:middle;
+}
+
+td.jqplot-table-legend > div {
+    border:1px solid #cccccc;
+    padding:0.2em;
+}
+
+div.jqplot-table-legend-swatch {
+    width:0px;
+    height:0px;
+    border-top-width: 0.35em;
+    border-bottom-width: 0.35em;
+    border-left-width: 0.6em;
+    border-right-width: 0.6em;
+    border-top-style: solid;
+    border-bottom-style: solid;
+    border-left-style: solid;
+    border-right-style: solid;
 }
 
 .jqplot-title {
@@ -78,7 +141,7 @@ table.jqplot-cursor-tooltip {
     font-size: 0.75em;
     white-space: nowrap;
     background: rgba(208,208,208,0.5);
-	padding: 1px;
+    padding: 1px;
 }
 
 .jqplot-highlighter-tooltip {
@@ -86,5 +149,19 @@ table.jqplot-cursor-tooltip {
     font-size: 0.75em;
     white-space: nowrap;
     background: rgba(208,208,208,0.5);
-	padding: 1px;
+    padding: 1px;
+}
+
+.jqplot-point-label {
+    font-size: 0.75em;
+}
+      
+td.jqplot-cursor-legend-swatch {
+vertical-align:middle;
+text-align:center;
+}
+
+div.jqplot-cursor-legend-swatch {
+width:1.2em;
+height:0.7em;
 }
