--- a/plugins/activedirectory/app/views/activedirectory/index.html.erb
+++ b/plugins/activedirectory/app/views/activedirectory/index.html.erb
@@ -60,7 +60,7 @@
 	      <%= check_box 'activedirectory', :create_dirs, {:disabled => disabled, :checked => @activedirectory.create_dirs}, true,false -%>
 	      <%= _("Create Home Directory on Login") %>
 	    </p>
-	    <% unless @activedirectory.administrator.nil? %>
+	    <% if @activedirectory.respond_to? :administrator %>
             <p>
               <%= label_tag :activedirectory_administrator, _("Adminstrator User Name") %>
             </p>
