- added icon from YaST SLE theme

--- a/plugins/ldap/app/views/ldap/index.html.erb
+++ b/plugins/ldap/app/views/ldap/index.html.erb
@@ -38,7 +38,7 @@
   <% end -%>
 </div>
 
-  <div class='plugin-icon'><img src='/icons/yast-users.png'/> <%= _("LDAP client") %></div>
+  <div class='plugin-icon'><img src='../icons/yast-ldap.png'/> <%= _("LDAP client") %></div>
   <div class='plugin-content'>
 
     <% form_for(:ldap, @ldap, :url => { :action => 'update' },
