--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -44,7 +44,7 @@
             if ($("#conf_mode").val() == "static"){
               $(".fieldset-group").show();
               $(".fieldset-group :input").enable();
-              $("#dnsForm").valid();
+              <!--$("#dnsForm").valid();is not needed anymore because of jquery.validate version update--> 
             } else {
               $(".fieldset-group").hide();
               $(".fieldset-group :input").disable();
@@ -174,45 +174,19 @@
 		});
 		
 		// FIXME: find better solution for starting the validation with document on load
-		$("#ip").keyup( function() {$("#dnsForm").valid();}); 
-		$("#netmask").keyup( function() {$("#dnsForm").valid();});
-		$("#default_route").keyup( function() {$("#dnsForm").valid();});
-		$("#domain").keyup( function() {$("#dnsForm").valid();});
-		$("#nameservers").keyup( function() {$("#dnsForm").valid();});
-		$("#searchdomains").keyup( function() {$("#dnsForm").valid();});
-    hide_static_config();
+		// TODO: remove commented lines after test (is not needed anymore because of jquery.validate version update)
+		//$("#ip").keyup( function() {$("#dnsForm").valid();}); 
+		//$("#netmask").keyup( function() {$("#dnsForm").valid();});
+		//$("#default_route").keyup( function() {$("#dnsForm").valid();});
+		//$("#domain").keyup( function() {$("#dnsForm").valid();});
+		//$("#nameservers").keyup( function() {$("#dnsForm").valid();});
+		//$("#searchdomains").keyup( function() {$("#dnsForm").valid();});
+		hide_static_config();
 	 });
 	 </script>
 
    <% javascript_tag do -%>
    //TODO move this validations to separate js library
-      function validIP(ip) {
-        //use [0-9] to avoid negative values and it is also better prepared to IP6
-        if (!ip.match(/^[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$/))
-          return false;
-
-        ipArray = ip.split(/\./);
-        for (i=0;i<4;++i){
-          if (ipArray[i]>255)
-            return false;
-        }
-        return true;
-      }
-
-      function validPrefix(prefix) {
-        if (!prefix.match(/^\/[0-9]{1,2}$/))
-          return false;
-
-        if (prefix.substr(1)>32)
-          return false;
-
-        return true;
-      }
-      function validNameservers(nameservers){
-        if (nameservers.match(/^\s*$/))
-            return false;
-        return true; //FIXME better check
-      }
       function validHostname(hostname){
         //not empty
         if (hostname.match(/^\s*$/))
