explicitely mention source of jquery jqplot css file

--- a/webclient/public/stylesheets/jquery.jqplot.css
+++ b/webclient/public/stylesheets/jquery.jqplot.css
@@ -1,4 +1,5 @@
-/*rules for the plot target div.  These will be cascaded down to all plot elements according to css rules*/
+/* Source: Jquery jplot plugin
+ * rules for the plot target div.  These will be cascaded down to all plot elements according to css rules*/
 .jqplot-target {
     position: relative;
     color: #666666;
